# GameGuesser

./: .gitignore  README.md  main.py  pyproject.toml
app/: fetch_steam.py
gameguesserfront/: package-lock.json  package.json
gameguesserfront/src/: App.tsx
